# VideoObjectProposals

./: .gitignore  CMakeLists.txt  Draw_Clusters.ipynb  LICENSE  README.md  Test_Kmeans.ipynb  city_scape_info.h  city_scape_info.py  compute_metrics.cpp  conversions.cpp  conversions.h  draw_clusters.py  extract_embedding.ipynb  extract_embedding.py  extract_embedding_old.py  generate_instances.cpp  generate_proposals.cpp  image_extractor.clif  image_extractor.cpp  image_extractor.h  inception_kmean_retrain.py  point_cloud_ops.clif  point_cloud_ops.cpp  point_cloud_ops.h  test_kmeans.py  test_point_cloud_ops.cpp  test_point_cloud_ops.ipynb
slim/: eval_image_classifier.py  freeze_graph  run_command  train_image_classifier.py
slim/datasets/: cityscapes.py  convert_cityscapes.py  dataset_factory.py  dataset_utils.py
slim/nets/: inception.py  inception_v3_kmeans.py  nets_factory.py
slim/preprocessing/: preprocessing_factory.py
